<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    tools:context=".SubActivity3">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:text="TextView"
                tools:text="@string/DatePicker1" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/DatePicker2" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/ryourisyasinn" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/price" />

                <SeekBar
                    android:id="@+id/seekBar2"
                    android:layout_width="280dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="62dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hosi1" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="267dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun1" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="523dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku1"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="281dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun2" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="532dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku2"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="277dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun3"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="530dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku3"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="277dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun4"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="529dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku4"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="289dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun5"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="538dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku5"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun6" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="528dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku6"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="265dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun7" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="516dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku7"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="253dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun8" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="504dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku8"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="267dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun9" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="519dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku9"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="298dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmokugun10"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="546dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/hinnmoku10"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    android:onClick="camera2"
                    app:maxImageSize="45dp"
                    app:backgroundTint="#F5FFDD"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
                    tools:ignore="VectorDrawableCompat" />

                <Button
                    android:id="@+id/Next2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginLeft="78dp"
                    android:layout_marginTop="60dp"
                    android:onClick="next2"
                    android:text="@string/btnNext"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

