<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity1">

    <TextView
        android:id="@+id/textViewNameS1"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/s1radioGroup1"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextS1"
        app:layout_constraintStart_toStartOf="@+id/textViewNameS1"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameS1">

        <RadioButton
            android:id="@+id/radioMaleS1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTitleM"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioFemaleS1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtnTitleF"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonPreS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:onClick="before"
        android:text="@string/btnPrevious"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNextS1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNextS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="44dp"
        android:onClick="next"
        android:text="@string/btnNext"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttonPreS1"
        app:layout_constraintTop_toBottomOf="@+id/s1radioGroup1" />
</androidx.constraintlayout.widget.ConstraintLayout>